youtube video player overlap solved

--- a/main.css
+++ b/main.css
@@ -126,7 +126,9 @@ span.ds-department{ color: #373737; font-weight: 500; font-size: 18px; padding-b
   8. >>> Mete Style
 ----------------------------------------------------------------*/
 .mete-wrapper{
-    width:100%
+    width:100%;
+	height:90%;
+	min-height:50vh;
 }
 
 
